@@ -35,13 +35,13 @@ if __name__ == '__main__':
             settings = json.loads(buf)
 
         Action = loader.get_class(settings['action'])
-        action = Action(logger, '/tmp/', str(time.time()), settings['params'], settings['ressources'])
+        action = Action(logger, '/tmp/', str(time.time()), settings['params'], settings['resources'])
 
         try:
             logger.info('Running %s' % settings['action'])
             action.run()
-            for index, ressource in action.get_output_ressources().iteritems():
-                logger.info('Output #%s: %s' % (index, ressource))
+            for index, resource in action.get_output_resources().iteritems():
+                logger.info('Output #%s: %s' % (index, resource))
 
             logger.info('Params: %s' % action.params)
             logger.info('Metadata: %s' % action.get_metadata())
